<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/main"
    android:id="@+id/mainCreate"
    tools:context="edu.unc.brennan.sportsearch.CreateEvent">
tools:context="edu.unc.brennan.sportsearch.EventListActivity">

<!-- Login progress -->
<ProgressBar
    android:id="@+id/event_progress"
    style="?android:attr/progressBarStyleLarge"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_gravity="center"
    android:visibility="gone" />

<ScrollView
    android:id="@+id/event_form"
    android:layout_width="match_parent"
    android:layout_height="440dp">

    <LinearLayout
        android:id="@+id/event_input_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sport:"/>
            <Spinner
                android:layout_gravity="center"
                android:textAlignment="center"
                android:id="@+id/spinnerSport"
                android:layout_height="wrap_content"
                android:prompt="@string/feedbacktype"
                android:layout_width="fill_parent"
                android:entries="@array/feedbacktypelist">
            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Location"/>
            <fragment
                android:id="@+id/place_autocomplete_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/in_date"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SELECT DATE"
                android:id="@+id/btn_date"
                android:onClick="date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/in_time"
                android:layout_below="@+id/in_date"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SELECT TIME"
                android:id="@+id/btn_time"
                android:onClick="time"
                android:layout_below="@+id/btn_date"
                android:layout_alignLeft="@+id/btn_date"
                android:layout_alignStart="@+id/btn_date" />
        </LinearLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="createEvent"
            android:text="@string/create_event"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="bottom|end"
    android:isScrollContainer="false"
    >
    <LinearLayout
        android:id="@+id/buttonBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        style="@android:style/ButtonBar"
        android:gravity="center"
        android:weightSum="6"
        android:isScrollContainer="false"
        >
        <View
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary" />
        <Button android:id="@+id/saveButton" android:layout_width="0px"
            android:layout_height="wrap_content" android:layout_weight="1"
            android:background="@drawable/events" android:onClick="events"/>
        <View
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@color/colorPrimaryDark" />
        <View
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary" />

        <Button android:id="@+id/cancelButton" android:layout_width="0px"
            android:layout_height="wrap_content" android:layout_weight="1"
            android:background="@drawable/map"
            android:onClick="map"/>
        <View
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary" />
    </LinearLayout>
</RelativeLayout>
</android.support.design.widget.CoordinatorLayout>

